# FastCourse

./: README.md  docker-compose.yml  makefile
backend/: Dockerfile  alembic.ini  dddd.toml  main.py  mkdocs.yml  pyproject.toml
backend/db/: db_setup.py
backend/docs/: api.md  index.md
backend/src/: main.py
backend/src/alembic/versions/: e5c9d619cf15_.py
backend/src/api/: content_blocks.py  courses.py  sections.py
backend/src/api/utils/: content_blocks.py  courses.py  sections.py
backend/src/db/: db_setup.py
backend/src/pydantic_schemas/: content_block.py  section.py
