[tool.poetry]
name = "fastlms"
version = "0.1.0"
description = ""
authors = ["Matin Moharami <matinmoharami@yahoo.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
psycopg2-binary = "^2.9.9"
alembic = "^1.13.1"
asyncpg = "^0.29.0"
sqlalchemy-utils = "^0.41.2"


[tool.poetry.dev-dependencies]
flake8 = "^7.0.0"
black = "^24.4.2"
pre-commit = "^3.7.1"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
